[project]
name = "research-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core libraries
    "pandas>=2.3.1",
    "spacy>=3.8.7",
    # API and web server
    "fastapi>=0.111.0",
    "httpx>=0.27.0", # for test client
    # Database and ORM support
    "sqlalchemy>=2.0.0",
    # Additional I/O format support
    "python-docx>=0.8.11",
    "pytesseract>=0.3.12",
    "pdf2image>=1.16.3",
    "Pillow>=10.2.0",
    # Visualization
    "plotly>=5.20.0",
    # Model interpretability (placeholders)
    "shap>=0.44.0",
    "lime<=0.2.0.1",
    # Security and authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    # Testing and linting
    "pytest>=8.2.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pre-commit>=3.5.0",
    "en-core-web-sm",
    "en-core-web-md",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
    "seaborn>=0.13.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
